fix mobile overflow

--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ html {
 
 body{
     margin-top: 110px; /* nav height */
+    overflow: hidden;
 }
 
 .page-heading {
@@ -82,6 +83,7 @@ body{
     opacity: 0;
     transform: translateX(50px);
     transition: all 0.8s ease-in-out;
+
 }
 
 .hidden-left {
